--- a/.github/workflows/github-action-scp-01.yml
+++ b/.github/workflows/github-action-scp-01.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: File made by Github Actions ubuntu
-        run: touch actions-file.log
+        run: touch actions-file_v2.log
     
       - name: From Github Actions to AWS EC2 through SCP
         uses: appleboy/scp-action@v0.1.7
@@ -15,5 +15,5 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: actions-file.log
+          source: actions-file_v2.log
           target: /home/ubuntu
