--- a/.github/workflows/github-action-scp-01.yml
+++ b/.github/workflows/github-action-scp-01.yml
@@ -4,16 +4,12 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: File made by Github Actions ubuntu
-        run: touch actions-file_v2.log
-    
+    steps: 
       - name: From Github Actions to AWS EC2 through SCP
         uses: appleboy/scp-action@v0.1.7
         with: 
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: actions-file_v2.log
-          target: /home/ubuntu
+          source: ActionsController.java
+          target: /home/ubuntu/app-with-actions/src/main/java/actions/controller
