--- a/.github/workflows/app-with-ecs-actions-01.yml
+++ b/.github/workflows/app-with-ecs-actions-01.yml
@@ -1,8 +1,9 @@
 name: User source Deploy to Amazon ECR & ECS
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
+  #push:
+  #  branches:
+  #    - main
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: app-with-ecs
